[package]
name = "filearco"
version = "0.1.0"
authors = ["Philip Woods <elzairthesorcerer@gmail.com>"]

[dependencies]
bincode = "0.8"
crc = "1.5"
memmap = "^0.5.2"
memadvise = { git = "https://github.com/elzair/memadvise" }
page_size = "0.4"
serde = "^1.0"
serde_derive = "^1.0"
walkdir = "1.0"

[dev-dependencies]
# serde_bytes = "0.10"

